Fixed slidshow covering menu bar, resized images

--- a/css/about.css
+++ b/css/about.css
@@ -72,11 +72,8 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-
-
+    z-index: 10;
 }
-
-
 
 .blurb-container {
     display: flex;
